# cartha-cli

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
cartha_cli/: __init__.py  bt.py  config.py  eth712.py  main.py  pair.py  pool_client.py  utils.py  verifier.py
cartha_cli/commands/: __init__.py  claim_deposit.py  common.py  config.py  extend_lock.py  health.py  help.py  miner_password.py  miner_status.py  pair_status.py  pools.py  prove_lock.py  prove_lock_helpers.py  prove_lock_payload.py  prove_lock_signing.py  register.py  shared_options.py  version.py
docs/: COMMANDS.md  EIP712_SIGNING.md  FEEDBACK.md  TESTNET_SETUP.md
testnet/: .gitignore  README.md  build_lock_proof.py  create_demo_evm_key.py  pool_ids.py  simulate_lock_created.py  simulate_lock_released.py  simulate_lock_updated.py  vault_mapping.py
tests/: test_cli.py
