[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "cartha-cli"
version = "0.1.0"
description = "CLI utilities for Cartha subnet miners."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Cartha Contributors" }]
dependencies = [
  "typer[all]>=0.12",
  "web3>=6.11,<7",
  "eth-account>=0.10,<0.11",
  "requests>=2.32",
  "python-dotenv>=1.0",
  "bittensor>=9.12.2",
  "pydantic>=2.6,<3",
  "pydantic-settings>=2.6,<3",
  "torch>=2.2,<3",
]

dynamic = ["entry-points"]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.4", "mypy>=1.9"]

[dependency-groups]
dev = ["pytest>=8.2", "ruff>=0.4", "mypy>=1.9"]

[project.scripts]
cartha = "cartha_cli:main"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
